# analise-de-indicadores-educacao-superior

./: README.md  main.ipynb  pyproject.toml  resumo_clusters_evasao.csv  ~$indicadores_trajetoria_educacao_superior_2019_2023.xlsx
